@startuml Event Implementation Hierarchy (with Records)

interface Event {
  +Long eventSequence()
}

interface CustomerEvent {
  +CustomerId customerId()
}

interface ConcertEvent {
  +ConcertId concertId()
}

class CustomerRegistered <<record>> {
  -CustomerId customerId
  -Long eventSequence
  -String customerName
  -String email
}

class TicketsPurchased <<record>> {
  -CustomerId customerId
  -Long eventSequence
  -TicketOrderId ticketOrderId
  -ConcertId concertId
  -int quantity
  -int paidAmount
}

class ConcertScheduled <<record>> {
  -ConcertId concertId
  -Long eventSequence
  -String artist
  -int ticketPrice
  -LocalDateTime showDateTime
  -LocalTime doorsTime
  -int capacity
  -int maxTicketsPerPurchase
}

class ConcertRescheduled <<record>> {
  -ConcertId concertId
  -Long eventSequence
  -LocalDateTime newShowDateTime
  -LocalTime newDoorsTime
}

class TicketsSold <<record>> {
  -ConcertId concertId
  -Long eventSequence
  -int quantity
  -int paidAmount
}

Event <|-- CustomerEvent
Event <|-- ConcertEvent

CustomerEvent <|.. CustomerRegistered
CustomerEvent <|.. TicketsPurchased

ConcertEvent <|.. ConcertScheduled
ConcertEvent <|.. ConcertRescheduled
ConcertEvent <|.. TicketsSold

@enduml